--- a/css/style.css
+++ b/css/style.css
@@ -75,3 +75,52 @@ marquee{
     color:bisque;
     font-size: 25px;;
   }
+
+  /* Footer section */
+footer{
+	width:100%;
+	height: 100%;
+    background-color: black;
+    color:bisque;
+	
+  }
+  footer img{
+	width: 200px;
+	border-radius: 50%;
+  }
+  .footer{
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	color: bisque;
+  }
+  footer .footer{
+	padding-top: 50px;
+  }
+  .footer-part2{
+	list-style-type: none;
+  }
+  .footer-part2 a{
+	text-decoration: none;
+	color:bisque;
+	
+  }
+  .footer-part2 a:hover{
+	color:aqua;
+  }
+  .footer h1{
+	color:aqua;
+  }
+  footer h6{
+	text-align: center;
+  }
+  .footer-part3{
+	list-style-type: none;
+  }
+  .footer-part3 a{
+	color:bisque;
+	text-decoration: none;
+  }
+  .footer-part3 a:hover{
+	color:aqua;
+  }
