--- a/practic/style.css
+++ b/practic/style.css
@@ -1,3 +1,11 @@
+
+
+
+.navbar-nav li a:hover{
+    background-color:rgb(88, 88, 5);
+    color:black;
+}
+
 .box{
     width:220px;
     height: 230px;
